correcting errors to download cv and dark mode

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -46,18 +46,138 @@ html{
 }
 
 /* ======= Variables dark theme ======= */
-
+body.dark-theme{
+    --title-color: #F2F2F2;
+        --text-color: #BFBFBF;
+        --text-color-light: #212121;
+        --container-color: #FAFAFA;
+        --container-color-alt: #181616;
+        --body-color: #2B2B2B;
+}
 
 /* ======= Button Dark/Light ======= */
+.change-theme{
+    position: absolute;
+    right: 0;
+    top: 2.2rem;
+    display: flex;
+    color: var(--text-color);
+    font-size: 1.2rem;
+    cursor: pointer;
+}
 
+.change-theme:hover{
+    color: var(--title-color);
+}
 
 /* ======= Font size variables to scale cv ======= */
-
+body.scale-cv{
+    --h1-font-size: .938rem;
+        --h2-font-size: .938rem;
+        --h3-font-size: .875rem;
+        --normal-font-size: .813rem;
+        --small-font-size: .75rem;
+        --smaller-font-size: .688rem;
+}
 
 /* ======= Generate PDF button ======= */
+.generate-pdf{
+    /* display: none; */
+    position: absolute;
+    top: 2.2rem;
+    left: 0;
+    font-size: 1.2rem;
+    color: var(--text-color);
+    cursor: pointer;
+}
 
+.generate-pdf:hover{
+    color: var(--title-color);
+}
 
 /* ======= Classes modified to reduce size and print on A4 sheet ======= */
+
+.scale-cv .change-theme,
+.scale-cv .generate-pdf{
+    display: none;
+}
+
+.scale-cv .bd-container{
+    max-width: 595px;
+}
+
+.scale-cv .section-title {
+    margin-bottom: .75rem;
+}
+
+.scale-cv .resume__left,
+.scale-cv .resume__right {
+    padding: 0 1rem;
+}
+
+.scale-cv .home__img{
+    width: 90px;
+    height: 90px;
+}
+
+.scale-cv .home__container{
+    gap: 1.5rem;
+}
+
+.scale-cv .home__data{
+    gap: .2 5rem;
+}
+
+.scale-cv .home__address,
+.scale-cv .social__container {
+    gap: .75rem;
+} 
+
+
+.scale-cv .home__icon,
+.scale-cv .social__icon,
+.scale-cv .interests__icons {
+  font-size: 1rem ;
+}
+
+.scale-cv .education__container,
+.scale-cv .experience__container,
+.scale-cv .certificate__container{
+ gap: 1rem;
+   
+}
+
+.scale-cv .education__time,
+.scale-cv .experience__time{
+    padding-right: .5rem;
+}
+
+.scale-cv .education__rounder,
+.scale-cv .experience__rounder{
+    width: 11px;
+    height: 11px;
+    margin-top: .22rem;
+}
+
+.scale-cv .education__line,
+.scale.cv .experience__line{
+    width: 1px;
+    height: 110%;
+    transform: translate(5px, 0);
+}
+
+.scale-cv .education__data,
+.scale-cv .experience__data{
+    gap: .25rem;
+}
+
+.scale-cv .skills__name{
+    margin-bottom: var(--mb-1);
+}
+
+.scale-cv .interests__container{
+    column-gap: 2.5rem;
+}
 
 body{
     margin: 0 0 var(--header-height) 0;
@@ -468,6 +588,44 @@ img{
         grid-template-columns: .5fr 1fr;
         background-color: var(--container-color);
         box-shadow: 0 0 8px rgba(13,12,12,.15);
+    } 
+
+    .resume__left{
+      background-color: var(--container-color-alt);  
+    }
+
+    .resume__left,
+    .resume__right{
+         padding: 0 1.5rem;
+    }
+
+    .generate-pdf{
+       display: inline-block; 
+    }
+    .section-title,
+    .profile__description{
+        text-align: initial;
+    }
+
+    .home__container{
+        gap: 1.5rem;
+    }
+
+    .home__button-movil{
+        display: none;
     }
     
+    .references__container{
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    /* .languages__content{
+        grid-template-columns: repeat(3, max-content);
+        column-gap: 3.5rem;
+    } */
+
+    
+
 }
+
+    
